...
										accent: <BodySSB color="brand" onPress={onTerms} />,
									}}
								/>
							</BodySSB>
						}
						checked={termsOfUse}
						testID="Check1"
						onPress={(): void => setTermsOfUse((prevState) => !prevState)}
					/>
					<CheckButton
						label={<BodyMSB>{t('pp_checkbox')}</BodyMSB>}
						description={
							<BodySSB color="secondary">
...
										accent: <BodySSB color="brand" onPress={onPrivacy} />,
									}}
								/>
							</BodySSB>
						}
						checked={privacyPolicy}
						testID="Check2"
						onPress={(): void => setPrivacyPolicy((prevState) => !prevState)}
					/>
				</View>

				<View style={styles.buttonContainer}>
					<Button
						text={t('continue')}
						size="large"
						disabled={!isValid}
						onPress={onPress}
						testID="Continue"
					/>
				</View>
			</View>
			<SafeAreaInset type="bottom" minPadding={16} />
		</>
	);
...
