...
			style={[rootStyles, style]}
			testID="WalletOnboarding">
			{showClose && onHide && (
				<TouchableOpacity
					style={styles.closeButton}
					activeOpacity={0.7}
					testID="WalletOnboardingClose"
					onPress={onHide}>
					<XIcon color="secondary" width={16} height={16} />
				</TouchableOpacity>
			)}
			<Display style={styles.text} onLayout={handleTextLayout}>
				{text}
...
